fix dark mode style

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -4,12 +4,19 @@ html :not(mark):not(code):not(pre):not(ins):not(option):not(input):not(select):n
     border-color: rgb(69, 155, 230) !important;
 }
 
+
 html, html body {
     background-image: none !important;
     background-color: rgb(27, 40, 54) !important;
 }
 
-html a:active, html a:active *, html a:visited, html a:visited * {
+html a, html a:active, html a:active *, html a:visited, html a:visited * {
     color: rgb(69, 155, 230) !important;
     border-color: rgb(69, 155, 230) !important;
+}
+
+html button, html iframe, html iframe *, html input, html input[type="button"], html input[type="checkebox"], html input[type="date"], html input[type="datetime-local"], html input[type="email"], html input[type="image"], html input[type="month"], html input[type="number"], html input[type="range"], html input[type="reset"], html input[type="search"], html input[type="submit"], html input[type="tel"], html input[type="text"], html input[type="time"], html input[type="url"], html input[type="week"], html select, html textarea, html [class*="button"], html [class*="btn"], html [role="button"], html [role="icon"], html i {
+    background-color: rgb(53, 66, 80) !important;
+    color: rgb(255, 255, 255) !important;
+    border-color: rgb(53, 66, 80) !important;
 }
