--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -53,7 +53,8 @@ html body.dm-dark .wp-dark-mode-switcher .toggle {
     justify-content: space-between;
     user-select: none;
     left: 50%;
-    transform: translateX(-50%);
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 html body .wp-dark-mode-switcher .modes p,
@@ -62,6 +63,7 @@ html body.dm-dark .wp-dark-mode-switcher .modes p {
     font-weight: 500 !important;
     background: transparent !important;
     color: #555 !important;
+    margin: 0;
 }
 
 .wp-dark-mode-switcher .dark {
@@ -77,7 +79,14 @@ html body .wp-dark-mode-switcher.floating,
 html body.dm-dark .wp-dark-mode-switcher.floating {
     position: fixed;
     bottom: 26px;
+}
+
+.wp-dark-mode-switcher.floating.right_bottom {
     right: 26px;
+}
+
+.wp-dark-mode-switcher.floating.left_bottom {
+    left: 26px;
 }
 
 /* Toggle */
